<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/fav"
            android:title="@string/fav" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_sign"
            android:icon="@drawable/ic_search"
            android:title="@string/sign"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_search"
            android:title="@string/sign"/>
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_paypel"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="paypal" />
        <item
            android:id="@+id/nav_mail"
            android:title="mail" />
        <item android:id="@+id/nav_control"
            android:title="@string/control">
            <menu>
                <item
                    android:id="@+id/nav_ads"
                    android:icon="@drawable/ic_search"
                    android:title="@string/MyAds"/>
                <item
                    android:icon="@drawable/ic_menu_send"
                    android:title="Headset" />
            </menu>
        </item>

    </group>


</menu>
